<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Back button at top right -->
    <ImageButton
        android:id="@+id/rewardsBackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="start|top"
        android:src="@drawable/ic_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:padding="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="05dp"
        android:layout_marginEnd="16dp"/>

    <!-- Main content below the back button -->
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/locations_count_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Congratulations! You have visited X out of Y locations."
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Visited_Locations"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/visitedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Unvisited_Locations"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/unvisitedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"/>

    </LinearLayout>
</FrameLayout>